[package]
name = "hlc"
version = "0.1.1"
authors = ["Tobias Schottdorf <tobias.schottdorf@gmail.com>"]

description = "hybrid logical clock"

documentation = "https://tschottdorf.github.io/hlc-rs/doc/hlc/"
homepage = "https://github.com/tschottdorf/hlc-rs"
repository = "https://github.com/tschottdorf/hlc-rs"

readme = "README.md"

keywords = ["hybrid", "logical", "clock", "distributed", "monotonic"]

license = "MIT"

[dependencies]
time = "0.1"
